# CG_Project02_WindVisualization

./: CMakeLists.txt
shaders/: Program.h  particle.frag  particle.vert  simple.frag  simple.vert  wind.comp
source/: Compute.h  MyGlWindow.cpp  MyGlWindow.h  Sphere.cpp  Sphere.h  Viewer.cpp  Viewer.h  Wind.cpp  Wind.h  source.cpp
